# paddle-lazy

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.mlir  Dockerfile.mlir.2004  README.md
3rd/: README.md
codegen/: .gitignore  README.md  autogen_eager_ops.py  autogen_kernel.py  autogen_kernels.py  autogen_lazy_node.py  autogen_lazy_nodes.py  autogen_ops.py  autogen_ops_map.py  base_api.py  codegen.py  run.sh  test_api.yaml
examples/: backword.py  conv.py
mlir_lib/: CMakeLists.txt
mlir_lib/examples/: CMakeLists.txt  conv2d.cpp  relu.cpp  sin.cpp
mlir_lib/include/: CMakeLists.txt
mlir_lib/include/Paddle/: PaddleDialect.h  PaddleDialect.td  PaddleOps.h  PaddleOps.td  PaddleTypes.h  PaddleTypes.td
mlir_lib/include/paddle-mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
mlir_lib/include/paddle-mlir/Conversion/PaddleToTosa/: PaddleToTosa.h
mlir_lib/include/paddle-mlir/Dialect/Paddle/IR/: CMakeLists.txt  PaddleDialect.h  PaddleDialect.td  PaddleOps.h  PaddleOps.td  PaddleTypes.h
mlir_lib/lib/Conversion/: CMakeLists.txt  PassDetail.h  Passes.cpp
mlir_lib/lib/Conversion/PaddleToTosa/: CMakeLists.txt  PaddleToTosa.cpp
mlir_lib/lib/Dialect/Paddle/IR/: CMakeLists.txt  PaddleDialect.cpp  PaddleOps.cpp  PaddleTypes.cpp
mlir_lib/lib/Paddle/: CMakeLists.txt  PaddleDialect.cpp  PaddleOps.cpp  PaddleTypes.cpp
mlir_lib/paddle-import/: CMakeLists.txt  import.cpp  import.h
mlir_lib/paddle-lsp-server/: CMakeLists.txt  paddle-lsp-server.cpp
mlir_lib/paddle-opt/: CMakeLists.txt  paddle-opt.cpp
mlir_lib/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir_lib/test/Paddle/: add.mlir  conv2d.mlir  relu.mlir  sin.mlir  tan.mlir
paddle_lazy/: .gitignore  CMakeLists.txt  lazy_allocator.cc  lazy_allocator.h  lazy_backend.cc  lazy_backend.h  lazy_nodes.cc  lazy_nodes.h  lazy_nodes_extra.h  lazy_tensor.cc  lazy_tensor.h  lib.cc  lib.h  test_phi_api.cc
paddle_lazy/eager_backend/: .gitignore  CMakeLists.txt  all_ops.h  eager_ops.cc  eager_ops.h  op_runner.cc  op_runner.h
paddle_lazy/kernels/: .gitignore  abs_grad.cc  abs_kernel.cc  assign_kernel.cc  conv_kernel.cc  full_kernel.cc  gaussian_random_kernel.cc  mean_grad.cc  pool_kernel.cc  register.cc.inc  uniform_random_kernel.cc
